--- a/data/roles.yml
+++ b/data/roles.yml
@@ -1,6 +1,39 @@
-- name: Warrior
+- name: Archeologist
   hotkey: a
-- name: Priest
+  races: hdg
+- name: Barbarian
   hotkey: b
+  races: ho
+- name: Caveman
+  hotkey: d
+  races: hdg
+- name: Healer
+  hotkey: h
+  races: hg
+- name: Knight
+  hotkey: k
+  races: h
+- name: Monk
+  hotkey: m
+  races: h
+- name: Priest
+  hotkey: p
+  races: he
 - name: Rogue
-  hotkey: c
+  hotkey: r
+  races: ho
+- name: Ranger
+  hotkey: R
+  races: hego
+- name: Samurai
+  hotkey: s
+  races: h
+- name: Tourist
+  hotkey: t
+  races: h
+- name: Valkyrie
+  hotkey: v
+  races: hd
+- name: Wizard
+  hotkey: w
+  races: hego
